hphp/hack/test/typecheck/higher_kinded_types/tparam_method_vs_class1.php
<?hh


class Test<TA> {

  // bad: TA is already bound
  public function test<TB<TA>>() : void {}

}
